--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,15 @@
 .home{
     width: 100%;
 }
+.nav{
+    /* background-color: red; */
+    border-bottom: 10px black;
+    padding: 20px 0 0 20px;
+    height:100px;
+    width: 100%;
+    display: block;
+    
+}
 
 .logo{
     color: #F1641E !important;
@@ -38,13 +47,28 @@
 
 .header-item button{
   border-radius: 20px;
+  padding: 8px 10px 8px 10px;
+  font-size: 14px;
+  font-weight: normal;
+    font-family: 'Crimson Text', serif;    
+    line-height: 18px;
 }
 
 .header-item button:hover{
   background-color: #E8E8E8;
 }
 
-#header-right{
+#header-right .button-divs{
     position: absolute;
     right:50px;
+}
+
+.sign-in-test{
+   
+    
+    position: absolute;
+    top: 20px;
+    right:5px;
+    
+  
 }
