--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -117,22 +117,22 @@ select
 /* Text Inputs
 -----------------------------------------------*/
 
-input[type=date],
-input[type=datetime],
-input[type=datetime-local],
-input[type=email],
-input[type=month],
-input[type=number],
-input[type=password],
-input[type=range],
-input[type=search],
-input[type=tel],
-input[type=text],
-input[type=time],
-input[type=url],
-input[type=week]
-{
-}
+// input[type=date],
+// input[type=datetime],
+// input[type=datetime-local],
+// input[type=email],
+// input[type=month],
+// input[type=number],
+// input[type=password],
+// input[type=range],
+// input[type=search],
+// input[type=tel],
+// input[type=text],
+// input[type=time],
+// input[type=url],
+// input[type=week]
+// {
+// }
 
 /* Button Controls
 -----------------------------------------------*/
@@ -147,10 +147,10 @@ input[type=radio]
 /* File Uploads
 -----------------------------------------------*/
 
-input[type=file]
-{
+// input[type=file]
+// {
 
-}
+// }
 
 /* Search Input
 -----------------------------------------------*/
@@ -159,7 +159,7 @@ input[type=file]
 input[type=search]
 {
 	-webkit-appearance:textfield;
-	-webkit-box-sizing:content-box;
+	// -webkit-box-sizing:content-box;
 }
 
 /* Turn off the recent search for webkit. It adds about 15px padding on the left */
@@ -204,10 +204,10 @@ textarea
 /* Selects
 -----------------------------------------------*/
 
-select
-{
+// select
+// {
 
-}
+// }
 
 select[multiple] 
 {
