after auth2 fixing reset_css-3

--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -1,34 +1,35 @@
-html, body, section, article,
-h1, h2, p, strong, em, a {
-  margin: 0;
-  border: 0;
-  padding: 0;
-  outline: 0;
-  box-sizing: inherit;
-  font: inherit;
-  text-decoration: inherit;
-  text-align: inherit;
-  color: inherit;
-  background: transparent;
-}
+// html, body, section, article,
+// h1, h2, p, strong, em, a {
+//   margin: 0;
+//   border: 0;
+//   padding: 0;
+//   outline: 0;
+//   box-sizing: inherit;
+//   font: inherit;
+//   text-decoration: inherit;
+//   text-align: inherit;
+//   color: inherit;
+//   background: transparent;
+// }
 
-ul, ol {
-  list-style: none;
-  padding: 0;
-}
+// ul, ol {
+//   list-style: none;
+//   padding: 0;
+// }
 
-input:focus, button:focus, select:focus {
-  outline: none;
-}
+// input:focus, button:focus, select:focus {
+//   outline: none;
+// }
 
-input[type="submit"], button {
-  cursor: pointer;
-}
+// input[type="submit"], button {
+//   cursor: pointer;
+// }
 
-section, div{
-  font-family: sans-serif;
-}
+// section, div{
+//   font-family: sans-serif;
+// }
 
-b {
-  font-weight: 600;
-}
+// b {
+//   font-weight: 600;
+// }
+
