--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
-@import url('./reset.scss');
+/* @import url('./reset.scss'); */
 
 .home{
     width: 100%;
