--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,6 +45,13 @@
 
 }
 
+.welcome{
+    font-size: 20px;
+    line-height: 28px;  
+    padding-top: 24px !important;
+    margin-bottom: 36px !important;
+}
+
 .header-item button{
   border-radius: 20px;
   padding: 8px 10px 8px 10px;
