--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -45,16 +45,33 @@
 }
 
 .signin-submit {
+  text-decoration: none;
   outline: none;
-  border-radius: 5px;
+  border-radius: 24px;
+  display: inline-block;
   margin: 15px;
   padding: 10px;
-  width: 40%;
+  width: 100% !important;
+      cursor: pointer;
+      outline: none;
   height: 15%;
   background-color: black;
   font-family: 'Spartan', sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   color: white;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 1.5;
+    min-height: 48px;
+    min-width: 48px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 18px;
+    padding-right: 18px;
+    position: relative;
+    text-align: center;
+    vertical-align: middle;
+    z-index: 10;
 }
 
 .signin-submit:hover {
