--- a/app/assets/stylesheets/images.css
+++ b/app/assets/stylesheets/images.css
@@ -4,7 +4,7 @@
     width: 143px;
     height: 113px;
     padding: 2px;
-    border-radius: 24px;
+    /* border-radius: 24px; */
 }
 
 .idx-images:hover {
