--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_self
  */
 /* @import url('./reset.scss'); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
 .home{
     width: 100%;
@@ -107,13 +108,13 @@
     border-radius: 20px;
   padding: 8px 10px 8px 10px;
   font-size: 14px;
-  font-weight: normal;
-    font-family: 'Crimson Text', serif;    
+  font-family: 'Roboto', sans-serif;
+  font-weight: 60px;
     line-height: 18px;
     position: absolute;
     top: 20px;
     right:120px;
-  
+  /* yyyy */
 }
 
 .sign-in-test2{
