--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <script src="https://kit.fontawesome.com/64b60bd2e5.js" crossorigin="anonymous"></script>
+ 
+  <script type="text/javascript">
+window.paymentImage = "<%= image_url('payment.png') %>";
+  </script>
+  
+
   </head>
 
   <body>
