--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@
     /* background-color: red; */
     border-bottom: 10px black;
     padding: 20px 0 0 20px;
-    height:100px;
+    height:50px;
     width: 100%;
     display: block;
     
@@ -50,7 +50,8 @@
     font-size: 20px;
     line-height: 28px;  
     padding-top: 24px !important;
-    margin-bottom: 36px !important;
+    margin-bottom: 25px !important;
+    padding-left: 30px;
 }
 
 .header-item button{
