--- a/app/assets/stylesheets/product-idx.css
+++ b/app/assets/stylesheets/product-idx.css
@@ -19,6 +19,15 @@
     font-size: 20px;
 }
 
+.cat-container{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    border-bottom: 2px solid rgba(34, 34, 34, 0.15);
+}
+
 .grid-container {
     /* box-sizing: border-box; */
     /* border: 1px solid black; */
@@ -27,6 +36,7 @@
     justify-content: center;
     align-items: center;
 }
+
 
 /* .grid-container {
     display: flex
@@ -85,6 +95,16 @@
     text-decoration: none;
 
 }
+.public-category{
+    padding-bottom: 2px;
+    color: black;
+    font-size: 13px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: lighter;
+    /* background-color: khaki; */
+    text-decoration: none;
+    line-height: 1.3;
+}
 
 .public-name {
     padding-bottom: 2px;
@@ -131,6 +151,19 @@
     line-height: 2;
     letter-spacing: normal;
     
+}
+
+.idx-category-div {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    /* min-width: 180px;
+    max-width: 180px;
+    min-height: 113px;
+    max-height: 113px; */
+    /* margin-bottom: 20px; */
+    /* width: 40%;
+    height: 40% */
 }
 
 .idx-item-div {
