--- a/app/assets/stylesheets/product-idx.css
+++ b/app/assets/stylesheets/product-idx.css
@@ -100,10 +100,29 @@
     color: black;
     font-size: 13px;
     font-family: 'Open Sans', sans-serif;
-    font-weight: lighter;
+    /* font-weight: lighter; */
     /* background-color: khaki; */
     text-decoration: none;
     line-height: 1.3;
+    padding:10px;
+    /* margin: -10px; */
+
+   
+    /* background-color: lightcoral; */
+    line-height: 1.5em;
+    height:30px;
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.underline {
+    /* display:inline-block; */
+    /* border-bottom: 1px solid #000;
+     */
+
+     padding-bottom: 5px;
+    height: 100px;
+    background-color: lightseagreen;
 }
 
 .public-name {
@@ -178,6 +197,8 @@
     /* width: 40%;
     height: 40% */
 }
+
+
 
 .user-product-idx-item {
     display: flex;
