--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@
     border-bottom: 10px black;
     padding: 20px 0 0 20px;
     height:50px;
-    width: 100%;
+    /* width: 100%; */
     display: block;
     
 }
