--- a/app/assets/stylesheets/images.css
+++ b/app/assets/stylesheets/images.css
@@ -114,6 +114,22 @@
     
 }
 
+.review-users-container{
+    display:flex;
+    flex-direction: row;
+    justify-items: center;
+    /* justify-content: center; */
+    align-items: center;
+ 
+}
+
+.review-users{
+    margin-right: 20px;
+    width:40px;
+    height:40px;
+        border-radius: 50% !important;
+    overflow: hidden !important;
+}
 .review-form_pagination{
     
     padding-top: 20px;
