--- a/app/assets/stylesheets/images.css
+++ b/app/assets/stylesheets/images.css
@@ -92,7 +92,7 @@
     font-family: 'Quicksand', sans-serif;
     font-size: 24px;
     vertical-align: middle;
-    z-index: 10;
+    z-index: 9;
     color: #222;
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     /* transition: transform 200ms cubic-bezier(0.345, 0.115, 0.135, 1.42),opacity 150ms ease-out;
@@ -142,7 +142,7 @@
 .product-left-side{
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 .review-form_pagination>ul>li{
     border-bottom: 1px solid lightgray;
@@ -153,6 +153,7 @@
 .show-div {
     display: flex;
     padding: 25px;
+    padding-top: 0px;git
 
 }
 
