--- a/app/assets/stylesheets/product-idx.css
+++ b/app/assets/stylesheets/product-idx.css
@@ -26,6 +26,7 @@
     align-items: center;
     justify-content: space-evenly;
     border-bottom: 2px solid rgba(34, 34, 34, 0.15);
+    margin-bottom: 20px;
 }
 
 .grid-container {
