--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -25,7 +25,7 @@
 }
 
 .label-input {
-  margin-top: 15px;
+  margin-top: 10px;
   margin-left: 15px;
   margin-right: 15px;
   margin-bottom: 5px;
@@ -42,7 +42,7 @@
   margin-top: 5px;
   margin-left: 16px;
   margin-right: 15px;
-  margin-bottom: 20px;
+  margin-bottom: 8px;
   padding: 5px;
   font-family: 'Spartan', sans-serif;
   font-size: 15px;
@@ -148,14 +148,11 @@
     line-height: 1.5;
     min-height: 48px;
     min-width: 48px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-left: 18px;
-    padding-right: 18px;
+   
     position: relative;
     text-align: center;
     vertical-align: middle;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     z-index: 10;
 }
 
