--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,9 +17,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 /* @import "react-alice-carousel"; */
 /* @import "react-alice-carousel/lib/alice-carousel.css"; */
-@import "react-alice-carousel/lib/scss/alice-carousel.css";
-/* @import "fontawesome.css"; */
-/* @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"; */
+/* @import "react-alice-carousel/lib/scss/alice-carousel.css"; */
+
 
 .home{
     width: 100%;
