--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@
 /* @import "react-alice-carousel"; */
 /* @import "react-alice-carousel/lib/alice-carousel.css"; */
 /* @import "react-alice-carousel/lib/scss/alice-carousel.css"; */
-
+@import "react-alice-carousel/lib/alice-carousel.css";
 
 .home{
     width: 100%;
