--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,12 @@
   <script type="text/javascript">
         window.paymentImage = "<%= image_url('payment.png') %>";
         window.marwaTopIcon = "<%= image_url('marwaTopIcon.jpg') %>";
-        
+        window.thumb="<%= image_url('thumb.png') %>";
   </script>
   
  
 
-   <meta property="og:image" content="<%= image_url('thumb.png') %>" />
-    <meta property="og:title" content="Letsy" />
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content="Letsy is a clone of Etsy. It allows users to sell and buy handmade and vintage products." />
-
+   
 
   </head>
 
